--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>GitHub Profile Finder</title>
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/25/25231.png">
+  <title>GitHub Profile Viewer</title>
+
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
   <div id="root"></div>
